@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<gconf>
+	<entry name="migrate_directories" mtime="1329073332" type="bool" value="false"/>
+</gconf>
