@@ -3,7 +3,7 @@ single_click=0
 use_trash=0
 confirm_del=1
 terminal=sakura
-archiver=xarchiver
+archiver=file-roller
 thumbnail_local=1
 thumbnail_max=2048
 
