@@ -3,7 +3,6 @@
 x-scheme-handler/mailto=claws-mail.desktop;
 application/epub+zip=FBReader.desktop;
 application/x-fictionbook+xml=FBReader.desktop;
-application/x-xz-compressed-tar=xarchiver.desktop;
 
 [Removed Associations]
 text/plain=abiword.desktop;
