@@ -1,21 +1,0 @@
-
-[xarchiver]
-preferred_format=12
-confirm_deletion=true
-sort_filename_content=false
-store_output=false
-icon_size=0
-show_archive_comment=true
-show_sidebar=true
-show_location_bar=true
-preferred_temp_dir=/tmp/.private/anon
-allow_sub_dir=1
-overwrite=false
-full_path=true
-touch=false
-freshen=false
-update=false
-store_path=false
-recurse=true
-solid_archive=false
-remove_files=false
