@@ -16,6 +16,7 @@
   * Better support for VMware and VirtualBox virtualization
   * Better support for regular mailboxes in Claws-Mail
   * Better Bluetooth support
+  * Replaced Xarchiver with File Roller
 
   * Unsafe Browser now refuses to run once Tor has established a circuit
   * Added keyboard layout configuration via locale customization applet
